--- a/weather.html
+++ b/weather.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List App - F8 Zoom Day 34</title>
+    <title>Weather App - F8 Zoom Day 34</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link rel="stylesheet" href="./css/reset.css"/>
-    <link rel="stylesheet" href="./css/todo.css"/>
+    <link rel="stylesheet" href="./css/weather.css"/>
 </head>
 <body>    
     <div id="root"></div>
-    <script type="text/babel" src="./js/todo.js"></script>
+    <script type="text/babel" src="./js/weather.js">
+    </script>
 </body>
 </html>
